--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App {
   text-align: center;
+  display: grid;
+  grid-gap: 20px;
+  justify-items: center;
 }
 
 .App-header {
   background-color: #222;
-  height: 60px;
+  height: 30px;
+  justify-self: stretch;
   padding: 20px;
   color: white;
 }
@@ -13,16 +17,33 @@
   font-size: 1.5em;
 }
 
-.Board {
-  margin: 50px auto;
+.Message {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  width: 700px;
+  height: 130px;
   background: #bada55;
-  width: 500px;
-  height: 500px;
 }
 
-.Message {
-  margin: 50px auto;
-  width: 700px;
-  height: 200px;
+.Board {
   background: #bada55;
+  margin: 0 auto;
+  width: 450px;
+  height: 450px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-items: stretch;
+  align-items: stretch;
+}
+
+.Cell {
+  background: black;
+  display: grid;
+  justify-items: stretch;
+  align-items: stretch;
+}
+
+.Cell:nth-of-type(1){
+  background: white;
 }
