Message center checks for no moves left and diplays appropriate message.

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   grid-template-columns: 1fr 3fr 1fr;
   width: 700px;
   height: 130px;
+  color: var(--black);
   background: var(--green);
 }
 
@@ -53,4 +54,11 @@
 
 .Marker-O {
   background: blue;
+}
+
+.reset {
+  font-size: 1.5em;
+  border-radius: 5px;
+  padding: 5px 50px;
+  border: 1px solid var(--black);
 }
