--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,72 @@
 :root {
-  --green: #bada55;
   --black: #272727;
+  --green: #bada55;
+}
+
+html {
+  background: url('./tic-tac-toe.png');
+  background-repeat: repeat;
 }
 
 .App {
-  text-align: center;
   display: grid;
-  grid-gap: 20px;
+  gap: 1.3em;
   justify-items: center;
-}
-
-.App-header {
-  background-color: var(--black);
-  height: 30px;
-  justify-self: stretch;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
+  text-align: center;
+  width: 80%;
+  background: #ccc;
+  margin: 0 auto;
+  height: 100vh;
 }
 
 .Message {
+  background: var(--green);
+  border-radius: 15px;
+  box-shadow: 0 1em 1.3em -0.3em rgba(123, 139, 67, 0.5);
+  color: var(--black);
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  width: 700px;
-  height: 130px;
-  color: var(--black);
-  background: var(--green);
+  margin-top: 0.5em;
+  width: 80%;
 }
 
 .Board {
-  background: var(--black);;
-  margin: 0 auto;
-  width: 450px;
-  height: 450px;
+  background: var(--black);
+  border: 1px solid rgba(63, 63, 63, 0.1);
+  border-radius: 5px;
+  box-shadow: 0 1em 1.3em -0.3em rgba(0,0,0,0.4);
   display: grid;
+  gap: 5px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  grid-gap: 5px;
+  height: 450px;
+  margin: 0 auto;
+  width: 450px;
 }
 
 .Cell {
   display: grid;
   justify-items: stretch;
   align-items: stretch;
+  animation: twirl 1s ease-in forwards;
+  font-family: 'Finger Paint', cursive;
+  font-size: 6em;
+}
+
+.Cell>button:hover {
+  background: #aaa;
 }
 
 .Marker-X {
-  background: red;
+  background: #da6955;
+  animation: slideFromLeft 0.5s ease-in forwards;
+  transform-origin: left;
 }
 
 .Marker-O {
-  background: blue;
+  background: #558ada;
+  animation: slideFromRight 0.5s ease-in forwards;
+  transform-origin: right;
 }
 
 .button {
@@ -61,4 +74,32 @@
   border-radius: 5px;
   padding: 5px 50px;
   border: 1px solid var(--black);
+}
+
+@keyframes slideFromLeft {
+  0%{
+    transform: rotateY(90deg);
+    opacity: 0;
+  }
+  80%{
+    transform: rotateY(-20deg);
+  }
+  100%{
+    transform: rotateY(0deg);
+    opacity: 1;
+  }
+}
+
+@keyframes slideFromRight {
+  0%{
+    transform: rotateY(-90deg);
+    opacity: 0;
+  }
+  80%{
+    transform: rotateY(20deg);
+  }
+  100%{
+    transform: rotateY(0deg);
+    opacity: 1;
+  }
 }
