--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,50 @@
 :root {
   --black: #272727;
+  --white: #fdfdfd;
   --green: #bada55;
+  --red: #da6955;
+  --blue: #558ada;
 }
 
 html {
   background: url('./tic-tac-toe.png');
   background-repeat: repeat;
+}
+
+h2 {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  line-height: 0.95em;
+}
+
+.Display {
+  letter-spacing: 4.5px;
+  display: grid;
+  grid-template-rows: 2fr, 1fr;
+  font-size: 1.3em;
+}
+
+.title {
+  letter-spacing: 4px;
+}
+
+.score {
+  border: var(--black) 1px solid;
+  display: inline;
+  padding: 5px 20px;
+  border-radius: 3px;
+  font-family: 'Finger Paint', cursive;
+  box-shadow: 0 0.4em 1.1em 0 rgba(58, 58, 58, 0.5);
+  font-size: 1.6em;
+  color: var(--white);
+}
+
+.P1 {
+  background: var(--red);
+}
+
+.P2 {
+  background: var(--blue);
 }
 
 .App {
@@ -14,15 +53,15 @@ html {
   justify-items: center;
   text-align: center;
   width: 80%;
-  background: #ccc;
+  background: linear-gradient(to right, #beb1b1, #ccc, #bcc4cf);
   margin: 0 auto;
   height: 100vh;
 }
 
 .Message {
-  background: var(--green);
+  background: linear-gradient(72deg, #d85b45, #ddd, #5f90da);
   border-radius: 15px;
-  box-shadow: 0 1em 1.3em -0.3em rgba(123, 139, 67, 0.5);
+  box-shadow: 0 1em 1.3em -0.3em rgba(75, 75, 75, 0.5);
   color: var(--black);
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
@@ -44,28 +83,40 @@ html {
   width: 450px;
 }
 
+@media (max-width: 650px) {
+  .Board {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    transform: scale(0.9);
+  }
+
+  .Message {
+    height: 110px;
+  }
+}
+
 .Cell {
   display: grid;
   justify-items: stretch;
   align-items: stretch;
-  animation: twirl 1s ease-in forwards;
   font-family: 'Finger Paint', cursive;
   font-size: 6em;
 }
 
 .Cell>button:hover {
-  background: #aaa;
+  background: #ccc;
 }
 
 .Marker-X {
-  background: #da6955;
-  animation: slideFromLeft 0.5s ease-in forwards;
+  background: var(--red);
+  animation: slideFromLeft 300ms ease-out forwards;
   transform-origin: left;
 }
 
 .Marker-O {
-  background: #558ada;
-  animation: slideFromRight 0.5s ease-in forwards;
+  background: var(--blue);
+  animation: slideFromRight 300ms ease-out forwards;
   transform-origin: right;
 }
 
@@ -92,11 +143,11 @@ html {
 
 @keyframes slideFromRight {
   0%{
-    transform: rotateY(-90deg);
+    transform: rotateY(90deg);
     opacity: 0;
   }
   80%{
-    transform: rotateY(20deg);
+    transform: rotateY(-20deg);
   }
   100%{
     transform: rotateY(0deg);
